--- a/src/components/Content.astro
+++ b/src/components/Content.astro
@@ -3,6 +3,6 @@ import "../styles/globals.css";
 const { children, class: extraClass = "" } = Astro.props;
 ---
 
-<div class="m-4 bg-black/20">
+<div class="m-4">
 	<slot />
 </div>
