--- a/src/components/Navigation.astro
+++ b/src/components/Navigation.astro
@@ -1,14 +1,17 @@
-
 ---
-import '../styles/globals.css'
+import "../styles/globals.css";
 ---
 
-<div class="p-4 m-4 rounded-xl flex flex-row justify-evenly bg-white/2 align-bottom ">
-	<a href="/">Home</a>
-	<i class="ph ph-microphone text-xl"></i>
-		
-	<a href="/">About</a>
-	<a href="/">Music</a>
-	<a href="/">Home</a>
-	<a href="/">Home</a>
+<div class="flex flex-col md:flex-row gap-4 p-2 m-4 items-center justify-between">
+	<div class="text-[24px] font-bold"><a href="/">Ícaro Ferre</a></div>
+	<div
+		class="p-2 px-4 rounded-xl flex flex-col md:flex-row justify-end gap-8 bg-white/2 align-bottom"
+	>
+		<a href="/about">About</a>
+		<a href="/music">Music</a>
+		<a href="/media">Media</a>
+		<a href="/projects">Projects</a>
+		<a href="/opensource">Open Source</a>
+		<a href="https://spektroaudio.com">Spektro Audio</a>
+	</div>
 </div>
