--- a/src/components/Separator.astro
+++ b/src/components/Separator.astro
@@ -8,7 +8,7 @@ export interface Props {
 
 const {
 	width = "20px",
-	height = "500px",
+	height = "100px",
 	stripeWidth = "4px",
 	className = "",
 } = Astro.props;
@@ -17,7 +17,7 @@ const backgroundStyle = `repeating-linear-gradient(45deg, white 1px, white ${str
 ---
 
 <div
-	class={`h-full flex-shrink-0 self-stretch hidden md:block ${className} opacity-10`}
-	style={`width: ${width}; min-width: ${width}; height: ${height}; background: ${backgroundStyle};`}
+	class={`h-full flex-shrink-0 place-self-stretch hidden md:block ${className} opacity-10`}
+	style={`width: ${width}; min-width: ${width}; height:auto; background: ${backgroundStyle};`}
 >
 </div>
