--- a/src/layouts/Base.astro
+++ b/src/layouts/Base.astro
@@ -2,6 +2,7 @@
 import "../styles/globals.css";
 import Navigation from "../components/Navigation.astro";
 import Content from "../components/Content.astro";
+import Footer from "../components/Footer.astro";
 import { Font } from "astro:assets";
 interface Props {
 	children: any;
@@ -25,12 +26,13 @@ const { title, children } = Astro.props;
 			type="text/css"
 			href="https://cdn.jsdelivr.net/npm/@phosphor-icons/web@2.1.1/src/fill/style.css"
 		/>
-		<title>{title}</title>
+		<title>Icaro Fere - {title}</title>
 		<Font cssVariable="--font-header" preload />
 		<Font cssVariable="--font-body" preload />
 	</head>
 	<body>
 		<Navigation />
 		<Content><slot /></Content>
+		<Footer />
 	</body>
 </html>
