--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -2,7 +2,7 @@
 import "../styles/globals.css";
 ---
 
-<div class="m-4 gap-4 flex flex-row justify-end">
+<div class="m-8 w-[95%] gap-4 flex flex-row justify-end">
 	<a href="https://github.com/icaroferre">
 		<i class="ph ph-github-logo text-xl"></i>
 	</a>
