--- a/src/layouts/Base.astro
+++ b/src/layouts/Base.astro
@@ -26,7 +26,7 @@ const { title, children } = Astro.props;
 			type="text/css"
 			href="https://cdn.jsdelivr.net/npm/@phosphor-icons/web@2.1.1/src/fill/style.css"
 		/>
-		<title>Icaro Fere - {title}</title>
+		<title>Icaro Ferre - {title}</title>
 		<Font cssVariable="--font-header" preload />
 		<Font cssVariable="--font-body" preload />
 	</head>
