--- a/src/layouts/Project.astro
+++ b/src/layouts/Project.astro
@@ -89,7 +89,8 @@ const galleryImages =
 			}
 		</div>
 
-		<div class="p-10 text-sm font-thin">
+		<div class="p-4  text-sm font-thin">
+			<h1>Description</h1>
 			<slot />
 		</div>
 	</div>
