--- a/src/components/Navigation.astro
+++ b/src/components/Navigation.astro
@@ -2,8 +2,14 @@
 import "../styles/globals.css";
 ---
 
-<div class="flex flex-col md:flex-row gap-4 p-2 m-4 items-center justify-between">
-	<div class="text-[24px] font-bold"><a href="/">Ícaro Ferre</a></div>
+<div
+	class="flex flex-col md:flex-row gap-4 p-2 m-4 items-center justify-between text-nowrap"
+>
+	<a href="/"
+		><div class="text-[30px] font-black" data-text="Ícaro Ferre">
+			Ícaro Ferre
+		</div></a
+	>
 	<div
 		class="p-2 px-4 rounded-xl flex flex-col md:flex-row justify-end gap-8 bg-white/2 align-bottom"
 	>
@@ -11,7 +17,6 @@ import "../styles/globals.css";
 		<a href="/music">Music</a>
 		<a href="/media">Media</a>
 		<a href="/projects">Projects</a>
-		<a href="/opensource">Open Source</a>
 		<a href="https://spektroaudio.com">Spektro Audio</a>
 	</div>
 </div>
