--- a/src/components/PageMediaCard.astro
+++ b/src/components/PageMediaCard.astro
@@ -13,7 +13,7 @@ const { title } = Astro.props;
 		<h1>{title}</h1>
 	</div>
 	<div
-		class="flex flex-row p-4 justify-center center max-h-100 overflow-y-auto overscroll-contain hover:border-2 border-white/10"
+		class="flex flex-row p-4 justify-center center max-h-100 overflow-y-auto overscroll-contain"
 	>
 		<slot />
 	</div>
