--- a/src/pages/music.astro
+++ b/src/pages/music.astro
@@ -7,10 +7,10 @@ const music = await getCollection("music");
 ---
 
 <BaseLayout title="Music">
-	<div class="grid grid-cols-1 gap-8">
+	<div class="grid grid-cols-1 md:grid-cols-2 gap-8">
 		{
 			music.map(({ data }) => (
-				<div class="bg-white/10 m-4 rounded-lg p-5">
+				<div class="bg-black/30 m-4 rounded-lg p-8 shadow-lg">
 					<div class="text-[30px] font-thin">{data.title}</div>
 					<div class="text-sm opacity-80">
 						{data.year} - {data.label}
@@ -19,7 +19,7 @@ const music = await getCollection("music");
 						<img
 							src={data.artwork}
 							alt={data.title}
-							class="p-4 rounded-xl artwork"
+							class="mt-4 artwork rounded-lg"
 						/>
 						<div class="flex flex-col gap-2 p-4">
 							<div class="opacity-50">TRACKLIST </div>
@@ -32,10 +32,18 @@ const music = await getCollection("music");
 							</div>
 							<div class="opacity-50">LISTEN AT</div>
 							<div class="flex flex-col gap-2">
-								{ data.bandcamp && (<a href={data.bandcamp}>Bandcamp</a>)}
-								{ data.applemusic && (<a href={data.applemusic}>Apple Music</a>)}
-								{ data.bandcamp && (<a href={data.bandcamp}>Spotify</a>)}
-								{ data.youtube && (<a href={data.youtube}>Youtube</a>)}
+								{data.bandcamp && (
+									<a href={data.bandcamp}>Bandcamp</a>
+								)}
+								{data.applemusic && (
+									<a href={data.applemusic}>Apple Music</a>
+								)}
+								{data.bandcamp && (
+									<a href={data.bandcamp}>Spotify</a>
+								)}
+								{data.youtube && (
+									<a href={data.youtube}>Youtube</a>
+								)}
 							</div>
 						</div>
 					</div>
