--- a/src/pages/projects.astro
+++ b/src/pages/projects.astro
@@ -10,22 +10,58 @@ const projects = await getCollection("projects");
 <BaseLayout title="Projects">
 	<div class="p-4 grid grid-cols-1 md:grid-cols-3 gap-8">
 		{
-			projects.map(({ data, slug }) => (
-
-				<LinkCard title={data.title} url={`/projects/${slug}/`} image={data.front_image} description={data.excerpt}/>
-				<!-- <a -->
-				<!-- 	href={`/projects/${slug}/`} -->
-				<!-- 	class="block bg-black/50 hover:bg-white/10 rounded-lg p-4 space-y-2" -->
-				<!-- > -->
-				<!-- 	<div class="text-md font-thin">{data.title}</div> -->
-				<!-- 	<div class="text-xs opacity-50">{data.excerpt}</div> -->
-				<!-- 	<img -->
-				<!-- 		src={data.front_image} -->
-				<!-- 		alt={data.title} -->
-				<!-- 		class="mt-4 rounded-lg crop-2x1" -->
-				<!-- 	/> -->
-				<!-- </a> -->
-			))
+			projects
+				.sort((a, b) => a.data.title.localeCompare(b.data.title))
+				.map(({ data, slug }) => (
+					<LinkCard
+						title={data.title}
+						url={`/projects/${slug}/`}
+						image={data.front_image}
+						description={data.excerpt}
+					/>
+				))
 		}
+	</div>
+
+	<h2 class="p-4 mt-4">Open Source Projects</h2>
+
+	<div class="grid grid-cols-1 md:grid-cols-4 gap-8 p-4">
+		<LinkCard
+			title="Audiohit"
+			url="https://github.com/icaroferre/AudioHit"
+			description="Rust-based CLI for batch processing audio samples"
+		/>
+		<LinkCard
+			title="Rusemi"
+			url="https://github.com/icaroferre/Rusemi"
+			description="Rust-based USB Serial to CoreMIDI CLI"
+		/>
+		<LinkCard
+			title="ot_utils"
+			url="https://github.com/icaroferre/ot_utils"
+			description="Rust library for grouping audio samples and generating .ot files for the Elektron Octatrack"
+		/>
+		<LinkCard
+			title="Versos"
+			url="https://github.com/icaroferre/Versos"
+			image="https://github.com/icaroferre/Versos/raw/master/Images/Versos-Screenshot.jpg"
+			description="Max/MSP Multi-Track Looper"
+		/>
+		<LinkCard
+			title="MGC"
+			url="https://github.com/icaroferre/MGC"
+			image="https://github.com/icaroferre/MGC/raw/master/screenshot.jpg?raw=true"
+			description="Multi-Channel Grid Control for Monome"
+		/>
+		<LinkCard
+			title="Pico8-Cartloader"
+			url="https://github.com/icaroferre/Pico8-Cartloader"
+			description="Batch downloader and Scraper for Pico-8 carts"
+		/>
+		<LinkCard
+			title="cgorganelle"
+			url="https://github.com/icaroferre/cgorganelle"
+			description="Rust library for the Critter & Guitarri Organelle synthesizer"
+		/>
 	</div>
 </BaseLayout>
