--- a/src/components/Content.astro
+++ b/src/components/Content.astro
@@ -3,6 +3,6 @@ import "../styles/globals.css";
 const { children, class: extraClass = "" } = Astro.props;
 ---
 
-<div class="m-12">
+<div class="m-4 md:m-12">
 	<slot />
 </div>
