--- a/src/components/LinkCard.astro
+++ b/src/components/LinkCard.astro
@@ -79,9 +79,9 @@ if (!videoId && fetch) {
 							{url}
 						</div>
 						{ogDescription && (
-							<p class="mb-2 text-sm font-thin opacity-70 text-balance wrap-break-word break-all">
+							<div class="mb-2 text-sm font-thin opacity-70 text-balance break-normal">
 								{ogDescription}
-							</p>
+							</div>
 						)}
 					</div>
 				</div>
