--- a/src/components/Navigation.astro
+++ b/src/components/Navigation.astro
@@ -11,7 +11,7 @@ import "../styles/globals.css";
 		</div></a
 	>
 	<div
-		class="p-2 px-4 rounded-xl flex flex-col md:flex-row justify-end gap-8 bg-white/2 align-bottom"
+		class="p-2 px-4 rounded-xl flex flex-col md:flex-row justify-end gap-4 md:gap-8 bg-white/2 align-bottom"
 	>
 		<a href="/about">About</a>
 		<a href="/music">Music</a>
