--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,8 +1,36 @@
 ---
 import BaseLayout from "../layouts/Base.astro";
 import LinkCard from "../components/LinkCard.astro";
+import PageHeader from "../components/PageHeader.astro";
 ---
 
 <BaseLayout title="">
-	<div>Index</div>
+	<div class="grid grid-cols-2 gap-8">
+
+		<LinkCard
+			title="About"
+			url="/about"
+			description="About me"
+			image=/images/LiveModular_1.jpg
+		/>
+		<LinkCard
+			title="Music"
+			url="/music"
+			description="My latest music releases"
+			image=/images/FractionsFragments.jpg
+		/>
+		<LinkCard
+			title="Projects"
+			url="/projects"
+			description="Check out some of my projects"
+			image=/images/ngen/06.jpg
+		/>
+		<LinkCard
+			title="Spektro Audio"
+			url="https://spektroaudio.com"
+			description="Music Tech Company based in São Paulo / Brazil"
+			image=/images/ngen/02.jpg
+			
+		/>
+	</div>
 </BaseLayout>
