--- a/src/pages/media.astro
+++ b/src/pages/media.astro
@@ -4,7 +4,7 @@ import LinkCard from "../components/LinkCard.astro";
 ---
 
 <BaseLayout title="Media">
-	<div class="grid grid-cols-3 gap-8">
+	<div class="grid grid-cols-1 md:grid-cols-3 gap-8">
 		<LinkCard
 			title="Art Music Technology Podcast 110: Ícaro Ferre"
 			url="https://www.youtube.com/watch?v=70i47n0LHHM"
