Fixed youtube links for link cards

--- a/src/components/LinkCard.astro
+++ b/src/components/LinkCard.astro
@@ -59,7 +59,7 @@ if (!videoId && fetch) {
 				<div class="px-4 py-2 flex flex-col gap-1">
 					<div class="mt-2 text-lg font-medium">{title}</div>
 					<div class="text-xs font-mono text-(--link-hover-color) break-all">
-						{url}
+						<a href={url}>{url}</a>
 					</div>
 				</div>
 			</div>
