--- a/src/components/LinkCard.astro
+++ b/src/components/LinkCard.astro
@@ -59,7 +59,11 @@ if (!videoId && fetch) {
 				<div class="px-4 py-2 flex flex-col gap-1">
 					<div class="mt-2 text-lg font-medium">{title}</div>
 					<div class="text-xs font-mono text-(--link-hover-color) break-all">
-						<a href={url}>{url}</a>
+						<a href={url}>
+							<div class="text-xs font-mono text-(--link-hover-color) break-all">
+								{url}
+							</div>
+						</a>
 					</div>
 				</div>
 			</div>
