--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -3,13 +3,16 @@ import "../styles/globals.css";
 ---
 
 <div class="m-8 w-[95%] gap-4 flex flex-row justify-end">
-	<a href="https://github.com/icaroferre">
-		<i class="ph ph-github-logo text-xl"></i>
+	<a href="https://tiktok.com/@icaroferre_">
+		<i class="ph ph-tiktok-logo text-xl"></i>
 	</a>
 	<a href="https://instagram.com/icaroferre">
 		<i class="ph ph-instagram-logo text-xl"></i>
 	</a>
-	<a href="https://tiktok.com/@icaroferre_">
-		<i class="ph ph-tiktok-logo text-xl"></i>
+	<a href="https://github.com/icaroferre">
+		<i class="ph ph-github-logo text-xl"></i>
+	</a>
+	<a href="https://soundcloud.com/icaro-ferre">
+		<i class="ph ph-soundcloud-logo text-xl"></i>
 	</a>
 </div>
