--- a/src/pages/music.astro
+++ b/src/pages/music.astro
@@ -34,6 +34,10 @@ const music = await getCollection("music");
 				url="https://soundcloud.com/connectch/icaro-ferre"
 				image="https://i1.sndcdn.com/artworks-000395616978-zphvvi-t500x500.jpg"
 			/>
+			<LinkCard
+				title="Icaro Ferre Live - Mommy Love Podcast #2"
+				url="https://www.youtube.com/watch?v=AQDb3LmXTDc"
+			/>
 		</div>
 		<h1>MUSIC RELEASES</h1>
 		<div class="grid grid-cols-1 lg:grid-cols-2 gap-4">
