--- a/src/pages/music.astro
+++ b/src/pages/music.astro
@@ -19,7 +19,7 @@ const music = await getCollection("music");
 >
 	<div class="grid grid-cols-1 justify-center gap-y-4">
 		<h1>DJ / LIVE SETS</h1>
-		<div class="grid grid-cols-1 md:grid-cols-3 gap-8 p-4">
+		<div class="grid grid-cols-1 md:grid-cols-3 xl:grid-cols-4 gap-8 p-4">
 			<LinkCard
 				title="Icaro Ferre no Fama Museu - Itu, SP"
 				url="https://www.youtube.com/watch?v=CIp-Q8Dd3oc"
