--- a/src/pages/projects.astro
+++ b/src/pages/projects.astro
@@ -31,7 +31,7 @@ const projects = await getCollection("projects");
 			</div>
 		</div>
 	</a>
-	<div class="p-4 grid grid-cols-1 md:grid-cols-3 gap-8">
+	<div class="p-4 grid grid-cols-1 md:grid-cols-3 xl:grid-cols-4 gap-8">
 		{
 			projects
 				.sort((a, b) => b.data.year - a.data.year)
@@ -48,7 +48,7 @@ const projects = await getCollection("projects");
 
 	<h2 class="p-4 mt-4">Open Source Projects</h2>
 
-	<div class="grid grid-cols-1 md:grid-cols-4 gap-8 p-4">
+	<div class="grid grid-cols-1 md:grid-cols-4 xl:grid-cols-6 gap-8 p-4">
 		<LinkCard
 			title="Audiohit"
 			url="https://github.com/icaroferre/AudioHit"
