--- a/src/layouts/Base.astro
+++ b/src/layouts/Base.astro
@@ -25,6 +25,22 @@ let page_title = "Icaro Ferre - " + title;
 <html lang="en">
 	<head>
 		<meta charset="utf-8" />
+
+		<!-- Google tag (gtag.js) -->
+		<script
+			async
+			src="https://www.googletagmanager.com/gtag/js?id=G-N3SFKZEELJ"
+		></script>
+		<script>
+			window.dataLayer = window.dataLayer || [];
+			function gtag() {
+				dataLayer.push(arguments);
+			}
+			gtag("js", new Date());
+
+			gtag("config", "G-N3SFKZEELJ");
+		</script>
+
 		<!-- <link rel="icon" type="image/svg+xml" href="/favicon.svg" /> -->
 		<meta name="viewport" content="width=device-width" />
 		<meta name="generator" content={Astro.generator} />
